--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "项目名称",
-  "description": "项目名称",
+  "name": "LX-01",
+  "description": "LX-01",
   "keywords": [
     "VMess VLESS"
   ],
